# foxplot

./: .buildinfo  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  api.html  developer-notes.html  functions.html  genindex.html  index.html  installation.html  interactive-mode.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tips-and-tricks.html  tox.ini  usage.html
.doctrees/: api.doctree  developer-notes.doctree  environment.pickle  functions.doctree  index.doctree  installation.doctree  interactive-mode.doctree  tips-and-tricks.doctree  usage.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  ci.yml  docs.yml  pypi.yml
_sources/: api.rst.txt  developer-notes.rst.txt  functions.rst.txt  index.rst.txt  installation.rst.txt  interactive-mode.rst.txt
docs/: conf.py  environment.yml  index.rst  tips-and-tricks.rst  usage.rst
examples/: plot_robot_data.py
examples/data/: robot.json
foxplot/: __init__.py  cli.py  color_picker.py  decode.py  exceptions.py  fox.py  frozen_series.py  functions.py  generate_html.py  hot_series.py  indexed_series.py  labeled_series.py  node.py  plot.py  series.py  spdlog.py  write_tmpfile.py
foxplot/decoders/: __init__.py  json.py  msgpack.py
foxplot/uPlot/: __init__.py  uPlot.mousewheel.js
foxplot/uplot/: __init__.py
tests/: __init__.py  test_color_picker.py  test_decode.py  test_decoders.py  test_fox.py  test_generate_html.py  test_node.py  test_series.py
